# CozyPixels

./: .gitignore  .vercelignore  LICENSE  README.md  components.json  package.json  vercel.json
.github/workflows/: release.yml
backend/: generate-sitemap.js  generate.js  package.json  server.js  wallpapers.json
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.css  App.jsx  ErrorBoundary.jsx  main.jsx  useFocusTrap.js
desktop/src-tauri/: 2  Cargo.toml  hdqwalls.html  tauri.conf.json
desktop/src-tauri/capabilities/: desktop.json
desktop/src-tauri/src/: lib.rs
extension/: background.js  manifest.json  newtab.css  newtab.html  newtab.js  popup.html  popup.js
frontend/: astro.config.mjs  index.html  package.json  stitch.html  tsconfig.json  vite.config.js
frontend/.astro/: settings.json
frontend/public/: llms.txt  manifest.json  robots.txt  sitemap.xml
frontend/public/Catppuccin/Animals & Creatures/: C3A5CW~1.WEB  C3A5CW~2.WEB  C3FC77~1.WEB
frontend/public/Catppuccin/Transportation/: C3A5CW~1.WEB
frontend/public/Catppuccin/Urban & Architecture/: C3A5CW~1.WEB
frontend/src/: App.jsx  custom-loader.css  index.css
frontend/src/components/: FaqSection.jsx
frontend/src/components/forgeui/: flip-text.jsx  sanctuary-mode.jsx  social-card.jsx  (+1 more)
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  500.astro  NotFoundPage.jsx  about.astro  contact.astro  faq.astro  index.astro  privacy.astro  terms.astro
src/components/ui/: 404.tsx  GradientBorderNav.tsx  InterstellarFluidHero.tsx  SliderPage.tsx
