[package]
name = "desktop"
version = "1.0.0"
description = "CozyPixels Desktop - Wallpaper Manager"
authors = ["Nikhil Yadav <@yadavnikhil03>"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
regex = "1"
url = "2"
percent-encoding = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
windows = { version = "0.52", features = ["System_UserProfile", "Storage", "Foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
